# advent-of-code

./: .gitignore  README.md  go.mod  go.sum  run.sh
2018/: run.sh
2018/day03/: main.go
2018/day15/: main_test.go  point.go
2018/day17/: flow.go  utils.go
2019/: .gitignore  Makefile  go.mod  go.sum  tools.go
2019/common/: functional.go  input.go  math.go
2019/day01/: fuel.go  fuel_test.go  main.go  main_test.go
2019/day02/: computer.go  computer_string.go  computer_test.go  isa.go  main.go  main_test.go  opcode_string.go
2019/day03/: main.go  (+3 more)
2020/: Cargo.toml  Makefile
2020/day01/: Cargo.toml
2020/day01/src/: main.rs
2020/scripts/: input.sh  run.sh
2020/src/: input.rs
2021/: Makefile  env.fish.example  go.mod  go.sum
2022/: Makefile  go.mod
2023/: day01.go  day01_test.go  go.mod
2024/: README.md  go.mod
day01/: main.go
day02/: main.go
day04/: main.go
day05/: main.go
day06/: main.go
day07/: main.go
day08/: main.go
day09/: input  main.go
day1-1/: main.go
day1-2/: main.go
day10/: main.go
day10-1/: main.go
day11/: main.go
day12/: main.go
day13/: main.go
day14/: main.go
day15/: arena.go  astar.go  bfs.go  cell.go  main.go  unit.go
day16/: instruction.go  instruction_test.go  main.go
day17/: main.go  utils.go
day2-1/: main.go
day2-2/: main.go
day3-1/: main.go
day3-2/: main.go
day4-1/: main.go
day4-2/: main.go
day5-1/: main.go
day5-2/: main.go
day6-1/: main.go
day6-2/: main.go
day7-1/: main.go
day7-2/: main.go
day8-1/: main.go
day8-2/: main.go
day9-1/: main.go
day9-2/: main.go
(+141 files in other folders)
