[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Tom Wambold <tom5760@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"
thiserror = "1.0.22"